force-app/main/default/objects/AfterCommitEvent__e/AfterCommitEvent__e.object-meta.xml
<CustomObject>
    <description>Generic After commit Event</description>
    <label>AfterCommitEvent</label>
    <pluralLabel>AfterCommitEvents</pluralLabel>
</CustomObject>