force-app/main/default/objects/AfterCommitEvent__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>EventType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>