force-app/main/default/objects/AfterCommitEvent__e/fields/LongValue__c.field-meta.xml
<CustomField>
    <fullName>LongValue__c</fullName>
    <label>Long Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>