force-app/main/default/objects/AfterCommitEvent__e/fields/ShortValue__c.field-meta.xml
<CustomField>
    <fullName>ShortValue__c</fullName>
    <description>Short Value</description>
    <label>Short Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>